[package]
name = "lzd"
version = "0.1.0"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "LZ double-factor factorization"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/lzd-rs"
repository = "https://github.com/kampersanda/lzd-rs"
homepage = "https://github.com/kampersanda/lzd-rs"
keywords = ["string", "lz"]
categories = ["algorithms", "compression"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_print = []

[dependencies]
clap = "2.33.3"
assert_cmd = "1.0.7"
