[package]
name = "lzd"
version = "0.1.1"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "LZ double-factor factorization"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/lzd"
repository = "https://github.com/kampersanda/lzd-rs"
homepage = "https://github.com/kampersanda/lzd-rs"
keywords = ["string", "lz"]
categories = ["algorithms", "compression"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_print = []
cli_test = ["assert_cmd"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
assert_cmd = {version = "2.1.1", optional = true}
